projet_GOCass/tests/bad/testfile-string-dot.go
package main

func main() { "test".x }
